Closed Bug 1339964 Opened 7 years ago Closed 7 years ago

"export async function f() {}" cannot be parsed

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: arai, Assigned: arai)

Details

Attachments

(1 file)

code:
  parseModule("export async function() {}")

actual:
  "SyntaxError: missing declaration after 'export' keyword:"

expected:
  parses
the code was wrong

I meant:
  parseModule("export async function f() {}")
Summary: "export async function() {}" cannot be parsed → "export async function f() {}" cannot be parsed
this patch is based on bug 1339963 patch.

forgot to handle TOK_ASYNC case after "export".
(was handling it only after "export default"
Attachment #8837857 - Flags: review?(till)
Comment on attachment 8837857 [details] [diff] [review]
Support export async function() {}.

Review of attachment 8837857 [details] [diff] [review]:
-----------------------------------------------------------------

r=me, thank you.
Attachment #8837857 - Flags: review?(till) → review+
https://hg.mozilla.org/mozilla-central/rev/12302127707b
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.