Bug 1339964 - Support export async function f() {}. r=till